Create v2 MAP broadcast rate topology with configs and tests