@@ -1,7 +1,8 @@
-package us.dot.its.jpo.conflictmonitor.monitor.topologies.validation;
+package us.dot.its.jpo.conflictmonitor.monitor.topologies.validation.spat;
 
 import java.time.Instant;
 import java.time.ZoneOffset;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Properties;
@@ -9,28 +10,26 @@ import java.util.Set;
 
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.kafka.common.serialization.Serde;
-import org.apache.kafka.streams.StreamsConfig;
-import org.apache.kafka.streams.Topology;
-import org.apache.kafka.streams.TopologyTestDriver;
 
-
-import us.dot.its.jpo.conflictmonitor.monitor.algorithms.timestamp_delta.map.MapTimestampDeltaParameters;
-import us.dot.its.jpo.conflictmonitor.monitor.algorithms.validation.map.MapValidationParameters;
-import us.dot.its.jpo.conflictmonitor.monitor.models.events.broadcast_rate.MapBroadcastRateEvent;
-import us.dot.its.jpo.conflictmonitor.monitor.models.events.minimum_data.MapMinimumDataEvent;
-import us.dot.its.jpo.conflictmonitor.monitor.models.events.timestamp_delta.MapTimestampDeltaEvent;
+import us.dot.its.jpo.conflictmonitor.monitor.algorithms.timestamp_delta.spat.SpatTimestampDeltaParameters;
+import us.dot.its.jpo.conflictmonitor.monitor.algorithms.validation.spat.SpatValidationParameters;
+import us.dot.its.jpo.conflictmonitor.monitor.models.events.broadcast_rate.SpatBroadcastRateEvent;
+import us.dot.its.jpo.conflictmonitor.monitor.models.events.minimum_data.SpatMinimumDataEvent;
+import us.dot.its.jpo.conflictmonitor.monitor.models.events.timestamp_delta.SpatTimestampDeltaEvent;
 import us.dot.its.jpo.conflictmonitor.monitor.serialization.JsonSerdes;
-import us.dot.its.jpo.conflictmonitor.monitor.topologies.timestamp_delta.MapTimestampDeltaTopology;
+import us.dot.its.jpo.conflictmonitor.monitor.topologies.timestamp_delta.SpatTimestampDeltaTopology;
+import us.dot.its.jpo.conflictmonitor.monitor.topologies.validation.TimestampExtractorForBroadcastRate;
 import us.dot.its.jpo.conflictmonitor.testutils.TopologyTestUtils;
 import us.dot.its.jpo.geojsonconverter.partitioner.RsuIntersectionKey;
 import us.dot.its.jpo.geojsonconverter.pojos.ProcessedValidationMessage;
-import us.dot.its.jpo.geojsonconverter.pojos.geojson.LineString;
-import us.dot.its.jpo.geojsonconverter.pojos.geojson.map.MapSharedProperties;
-import us.dot.its.jpo.geojsonconverter.pojos.geojson.map.ProcessedMap;
+import us.dot.its.jpo.geojsonconverter.pojos.spat.ProcessedSpat;
 
+import org.apache.kafka.streams.StreamsConfig;
+import org.apache.kafka.streams.Topology;
+import org.apache.kafka.streams.TopologyTestDriver;
 import org.junit.Test;
-
 
 import static java.util.stream.Collectors.toSet;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -40,17 +39,16 @@ import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.hamcrest.Matchers.startsWith;
 
+@Slf4j
+public class SpatValidationTopologyTest {
 
-public class MapValidationTopologyTest {
-
-
-    final String inputTopicName = "topic.ProcessedMap";
-    final String broadcastRateTopicName = "topic.CmMapBroadcastRateEvents";
-    final String minimumDataTopicName = "topic.CmMapMinimumDataEvents";
+    final String inputTopicName = "topic.ProcessedSpat";
+    final String broadcastRateTopicName = "topic.CmSpatBroadcastRateEvents";
+    final String minimumDataTopicName = "topic.CmSpatMinimumDataEvents";
     final int maxDeltaMilliseconds = 50;
     final String timestampOutputTopicName = "topic.CmTimestampDeltaEvent";
-    final String keyStoreName = "mapTimestampDeltaKeyStore";
-    final String eventStoreName = "mapTimestampDeltaEventStore";
+    final String keyStoreName = "spatTimestampDeltaKeyStore";
+    final String eventStoreName = "spatTimestampDeltaEventStore";
     final int retentionTimeMinutes = 60;
     final String notificationTopicName = "topic.CmTimestampDeltaNotification";
     
@@ -63,8 +61,8 @@ public class MapValidationTopologyTest {
     // Start time on 10-second window boundary
     final Instant startTime = Instant.ofEpochMilli(1674356320000L);
 
-    final int lowerBound = 9;
-    final int upperBound = 11;
+    final int lowerBound = 90;
+    final int upperBound = 110;
     final boolean debug = true;
 
     final String validationMsg = "Validation Message";
@@ -74,40 +72,38 @@ public class MapValidationTopologyTest {
     final String source = "{ rsuId='127.0.0.1', intersectionId='11111', region='10'}";
     final int intersectionId = 11111;
     final int region = 10;
-    
 
-    
     @Test
-    public void testMapValidationTopology() {
+    public void testSpatValidationTopology() {
 
-        Properties streamsConfig = createStreamsConfig();
+        var streamsConfig = createStreamsConfig();
         Topology topology = createTopology();
 
         try (TopologyTestDriver driver = new TopologyTestDriver(topology, streamsConfig);
              Serde<RsuIntersectionKey> rsuIntersectionKeySerde
                      = us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.RsuIntersectionKey();
-             Serde<ProcessedMap<LineString>> processedMapSerde
-                     = us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.ProcessedMapGeoJson();
-             Serde<MapBroadcastRateEvent> mapBroadcastRateEventSerde = JsonSerdes.MapBroadcastRateEvent();
-             Serde<MapMinimumDataEvent> mapMinumumDataEventSerde = JsonSerdes.MapMinimumDataEvent()) {
+             Serde<ProcessedSpat> processedSpatSerde
+                     = us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.ProcessedSpat();
+             Serde<SpatBroadcastRateEvent> spatBroadcastRateEventSerde = JsonSerdes.SpatBroadcastRateEvent();
+             Serde<SpatMinimumDataEvent> spatMinimumDataEventSerde = JsonSerdes.SpatMinimumDataEvent()) {
 
             var inputTopic = driver.createInputTopic(inputTopicName,
-                    rsuIntersectionKeySerde.serializer(), processedMapSerde.serializer());
+                    rsuIntersectionKeySerde.serializer(), processedSpatSerde.serializer());
 
             var broadcastRateTopic = driver.createOutputTopic(broadcastRateTopicName,
-                    rsuIntersectionKeySerde.deserializer(), mapBroadcastRateEventSerde.deserializer());
+                    rsuIntersectionKeySerde.deserializer(), spatBroadcastRateEventSerde.deserializer());
 
             var minimumDataTopic = driver.createOutputTopic(minimumDataTopicName,
-                    rsuIntersectionKeySerde.deserializer(), mapMinumumDataEventSerde.deserializer());
+                    rsuIntersectionKeySerde.deserializer(), spatMinimumDataEventSerde.deserializer());
 
             final RsuIntersectionKey key = new RsuIntersectionKey(rsuId, intersectionId, region);
 
-            // Send maps at .5 Hz (slow)
-            final int slowPeriodMillis = 2000;
-            final int totalTimeSeconds = 13;
+            // Send maps at 5 Hz (slow)
+            final int slowPeriodMillis = 200;
+            final int totalTimeSeconds = 11;
             List<Instant> instants = TopologyTestUtils.getInstants(startTime, slowPeriodMillis, totalTimeSeconds);
             for (var currentInstant : instants) {
-                var map = createMap(currentInstant);
+                var map = createSpat(currentInstant);
                 inputTopic.pipeInput(key, map, currentInstant);
             }
 
@@ -121,13 +117,13 @@ public class MapValidationTopologyTest {
                 assertThat("min data event rsuId", result.getSource(), equalTo(source));
                 assertThat("min data event intersectionId", result.getIntersectionID(), equalTo(intersectionId));
                 assertThat("min data missingDataElements size", result.getMissingDataElements(), hasSize(1));
-                var msg = result.getMissingDataElements().get(0);
+                var msg = result.getMissingDataElements().getFirst();
                 assertThat("min data validation message match", msg, startsWith(validationMsg));
             }
 
             var broadcastRateList = broadcastRateTopic.readKeyValuesToList();
             assertThat("Should be 1 broadcast rate event", broadcastRateList, hasSize(1));
-            var broadcastRate = broadcastRateList.get(0);
+            var broadcastRate = broadcastRateList.getFirst();
             var bcKey =  broadcastRate.key;
             assertThat("broadcast rate key rsuId", bcKey.getRsuId(), equalTo(rsuId));
             assertThat("broadcast rate key intersectionId", bcKey.getIntersectionId(), equalTo(intersectionId));
@@ -135,7 +131,7 @@ public class MapValidationTopologyTest {
             assertThat("broadcast rate device id", bcValue.getSource(), equalTo(source));
             assertThat("broadcast rate intersection id", bcValue.getIntersectionID(), equalTo(intersectionId));
             assertThat("broadcast rate topic name", bcValue.getTopicName(), equalTo(inputTopicName));
-            assertThat("broadcast rate number of messages", bcValue.getNumberOfMessages(), equalTo(5));
+            assertThat("broadcast rate number of messages", bcValue.getNumberOfMessages(), equalTo(50));
             assertThat("broadcast rate time period null", bcValue.getTimePeriod(), notNullValue());
             assertThat("broadcast rate time period", bcValue.getTimePeriod().periodMillis(), equalTo(10000L));
            
@@ -144,22 +140,20 @@ public class MapValidationTopologyTest {
     }
 
     @Test
-    public void testMapTimestampDeltaSubtopology() {
+    public void testSpatTimestampDeltaSubtopology() {
         Properties streamsConfig = createStreamsConfig();
         Topology topology = createTopology();
 
         try (TopologyTestDriver driver = new TopologyTestDriver(topology, streamsConfig);
-             Serde<RsuIntersectionKey> rsuIntersectionKeySerde
-                     = us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.RsuIntersectionKey();
-             Serde<ProcessedMap<LineString>> processedMapSerde
-                     = us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.ProcessedMapGeoJson();
-             Serde<MapTimestampDeltaEvent> mapTimestampDeltaEventSerde = JsonSerdes.MapTimestampDeltaEvent()) {
+             Serde<RsuIntersectionKey> rsuIntersectionKeySerde = us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.RsuIntersectionKey();
+             Serde<ProcessedSpat> processedSpatSerde = us.dot.its.jpo.geojsonconverter.serialization.JsonSerdes.ProcessedSpat();
+             Serde<SpatTimestampDeltaEvent> spatTimestampDeltaEventSerde = JsonSerdes.SpatTimestampDeltaEvent()) {
 
             var inputTopic = driver.createInputTopic(inputTopicName,
-                    rsuIntersectionKeySerde.serializer(), processedMapSerde.serializer());
+                    rsuIntersectionKeySerde.serializer(), processedSpatSerde.serializer());
 
             var timestampDeltaEventTopic = driver.createOutputTopic(timestampOutputTopicName,
-                    rsuIntersectionKeySerde.deserializer(), mapTimestampDeltaEventSerde.deserializer());
+                    rsuIntersectionKeySerde.deserializer(), spatTimestampDeltaEventSerde.deserializer());
 
             final RsuIntersectionKey key = new RsuIntersectionKey(rsuId, intersectionId, region);
 
@@ -172,35 +166,34 @@ public class MapValidationTopologyTest {
             final Instant start4 = start3.plusSeconds(2L);
             final Instant start4_minus600 = start4.minusMillis(600L);
 
-            inputTopic.pipeInput(key, createMapWithTimestampOffset(start1, start1_plus10), start1);
-            inputTopic.pipeInput(key, createMapWithTimestampOffset(start2, start2_plus500), start2);
-            inputTopic.pipeInput(key, createMapWithTimestampOffset(start3, start3_minus20), start3);
-            inputTopic.pipeInput(key, createMapWithTimestampOffset(start4, start4_minus600), start4);
+            inputTopic.pipeInput(key, createSpatWithTimestampOffset(start1, start1_plus10), start1);
+            inputTopic.pipeInput(key, createSpatWithTimestampOffset(start2, start2_plus500), start2);
+            inputTopic.pipeInput(key, createSpatWithTimestampOffset(start3, start3_minus20), start3);
+            inputTopic.pipeInput(key, createSpatWithTimestampOffset(start4, start4_minus600), start4);
+
+            var timestampEventList = timestampDeltaEventTopic.readKeyValuesToList();
 
             final Set<Long> expectDeltas = ImmutableSet.of(500L, -20L, -600L);
             final int numberOfEventsExpected = expectDeltas.size();
 
-            var timestampEventList = timestampDeltaEventTopic.readKeyValuesToList();
             assertThat(String.format("%s of 4 inputs should have produced timestamp delta events", numberOfEventsExpected),
                     timestampEventList, hasSize(numberOfEventsExpected));
 
 
             Set<Long> actualDeltas = timestampEventList.stream().map(entry -> entry.value.getDelta().getDeltaMillis()).collect(toSet());
-            assertThat(String.format("Expect deltas %s.  Actual deltas: %s", expectDeltas, actualDeltas),
-                    Sets.symmetricDifference(expectDeltas, actualDeltas), hasSize(0));
+            assertThat(String.format("Expect deltas: %s.  Actual deltas: %s", expectDeltas, actualDeltas), Sets.symmetricDifference(expectDeltas, actualDeltas), hasSize(0));
         }
     }
 
-
     private Topology createTopology() {
         var parameters = getParameters();
-        var mapValidationTopology = new MapValidationTopology();
-        mapValidationTopology.setParameters(parameters);
-        var timestampTopology = new MapTimestampDeltaTopology();
+        var spatValidationTopology = new SpatValidationTopology();
+        spatValidationTopology.setParameters(parameters);
+        var timestampTopology = new SpatTimestampDeltaTopology();
         var timestampParameters = getTimestampParameters();
         timestampTopology.setParameters(timestampParameters);
-        mapValidationTopology.setTimestampDeltaAlgorithm(timestampTopology);
-        return mapValidationTopology.buildTopology();
+        spatValidationTopology.setTimestampDeltaAlgorithm(timestampTopology);
+        return spatValidationTopology.buildTopology();
     }
 
     private Properties createStreamsConfig() {
@@ -211,8 +204,8 @@ public class MapValidationTopologyTest {
         return streamsConfig;
     }
 
-    private MapTimestampDeltaParameters getTimestampParameters() {
-        var parameters = new MapTimestampDeltaParameters();
+    private SpatTimestampDeltaParameters getTimestampParameters() {
+        var parameters = new SpatTimestampDeltaParameters();
         parameters.setDebug(debug);
         parameters.setMaxDeltaMilliseconds(maxDeltaMilliseconds);
         parameters.setOutputTopicName(timestampOutputTopicName);
@@ -223,8 +216,8 @@ public class MapValidationTopologyTest {
         return parameters;
     }
 
-    private MapValidationParameters getParameters() {
-        var parameters = new MapValidationParameters();
+    private SpatValidationParameters getParameters() {
+        var parameters = new SpatValidationParameters();
         parameters.setInputTopicName(inputTopicName);
         parameters.setBroadcastRateTopicName(broadcastRateTopicName);
         parameters.setMinimumDataTopicName(minimumDataTopicName);
@@ -234,37 +227,32 @@ public class MapValidationTopologyTest {
         parameters.setLowerBound(lowerBound);
         parameters.setUpperBound(upperBound);
         parameters.setDebug(debug);
+
         return parameters;
     }
 
 
 
-    private ProcessedMap<LineString> createMap(Instant timestamp) {
-        var map = new ProcessedMap<LineString>();
-        var props = new MapSharedProperties();
-        map.setProperties(props);
-        props.setOdeReceivedAt(timestamp.atZone(ZoneOffset.UTC));
-        props.setCti4501Conformant(false);
+    private ProcessedSpat createSpat(Instant timestamp) {
+        var spat = new ProcessedSpat();
+        spat.setOdeReceivedAt(timestamp.atZone(ZoneOffset.UTC).format(DateTimeFormatter.ISO_DATE_TIME));
+        spat.setCti4501Conformant(false);
         var valMsgList = new ArrayList<ProcessedValidationMessage>();
         var msg = new ProcessedValidationMessage();
         msg.setMessage(validationMsg);
         valMsgList.add(msg);
-        props.setValidationMessages(valMsgList);
-        return map;
+        spat.setValidationMessages(valMsgList);
+        return spat;
     }
 
-    //  odeReceivedAt and timestamp separately
-    private ProcessedMap<LineString> createMapWithTimestampOffset(Instant timestamp, Instant odeReceivedAt) {
-        var map = new ProcessedMap<LineString>();
-        var props = new MapSharedProperties();
-        map.setProperties(props);
-        props.setOdeReceivedAt(odeReceivedAt.atZone(ZoneOffset.UTC));
-        props.setTimeStamp(timestamp.atZone(ZoneOffset.UTC));
-        props.setCti4501Conformant(true);
-        return map;
+    private ProcessedSpat createSpatWithTimestampOffset(Instant timestamp, Instant odeReceivedAt) {
+        var spat = new ProcessedSpat();
+        spat.setOdeReceivedAt(odeReceivedAt.atZone(ZoneOffset.UTC).format(DateTimeFormatter.ISO_DATE_TIME));
+        spat.setUtcTimeStamp(timestamp.atZone(ZoneOffset.UTC));
+        spat.setCti4501Conformant(true);
+        return spat;
     }
 
-    
 
     
 }
